--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <script src="scripts/controllers/SeriesCtrl.js"></script>
     <script src="scripts/controllers/PelisProxCtrl.js"></script>
     <script src="scripts/controllers/SeriesHoyCtrl.js"></script>
+    <script src="scripts/services/ApiService.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css"/>
 </head>
 <body>
