Hemos creado un filtro y lo hemos usado desde una vista.

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <script src="scripts/controllers/SeriesHoyCtrl.js"></script>
     <script src="scripts/controllers/PeliDetalleCtrl.js"></script>
     <script src="scripts/services/ApiService.js"></script>
+    <script src="scripts/filters/FechaEstreno.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css"/>
 </head>
 <body>
