Hemos creado nuestra primera directiva. Va a mostrar las películas en la lista.

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <script src="scripts/controllers/PeliDetalleCtrl.js"></script>
     <script src="scripts/services/ApiService.js"></script>
     <script src="scripts/filters/FechaEstreno.js"></script>
+    <script src="scripts/directives/ListItem.js"></script>
     <link rel="stylesheet" href="css/bootstrap.css"/>
 </head>
 <body>
